# MiniCompiler

./: CMakeLists.txt  MiniCompiler.slnx
MiniCompiler/: .clang-format  .clang-tidy  MiniCompiler.cpp  MiniCompiler.vcxproj  MiniCompiler.vcxproj.filters  lexer.h  parser.h
